<resources>
    <string name="app_name">MasquesBLAMPAIN</string>
    <string name="name">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="phoneNumber">Numéro de téléphone</string>
    <string name="edit">Modifier</string>
    <string name="numberAdress">Numéro</string>
    <string name="streetNameAdress">Nom de rue</string>
    <string name="postalCode">Code Postal</string>
    <string name="town">Ville</string>
    <string name="cancel">Annuler</string>
    <string name="validate">Valider</string>
</resources>